# rosetta

./: Cargo.toml  README.md  build-installer.ps1  build.rs
docs/: PACKAGING.md
installer/: bundle.wxs
src/: address_resolver.rs  calibration_kind.rs  constants.rs  devices.rs  e384_commands.rs  lib.rs  main.rs  models.rs  resolutions.rs  stele.rs  stone.rs  syncro.rs  util.rs  workspace.rs
src/assets/: syncropatch.toml
src/devices/: e192.rs  syncro.rs
src/devices/e192/: address_resolver.rs
src/devices/syncro/: address_resolver.rs
src/syncro/: address_resolver.rs  dev_ram.rs  resolutions.rs
wix/: main.wxs
