[package]
name = "rosetta"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }

[build-dependencies]
bindgen = "0.71.0"